// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Beastcss Basic Usage should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss External Threshold should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1 {
  color: blue;
}
h2.unused {
  color: red;
}
p {
  color: purple;
}
p.unused {
  color: orange;
}
</style>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss Internal styles should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss additional stylesheets should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}p{background-color: yellow;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss exclude with a function should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
    <link rel=\\"stylesheet\\" href=\\"/excluded.css\\" >
  </head>

  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
    <p class=\\"excluded\\"></p>
  </body>
</html>
"
`;

exports[`Beastcss exclude with a regexp should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
    <link rel=\\"stylesheet\\" href=\\"/excluded.css\\" >
  </head>

  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
    <p class=\\"excluded\\"></p>
  </body>
</html>
"
`;

exports[`Beastcss external=false should match html snapshot 1`] = `
"<html>
  <head>
    <link rel=\\"stylesheet\\" href=\\"/style.css\\" >
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss fs should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss prune source after multiple html processed last run should match stylesheet snapshot 1`] = `"p.unused{color: orange;}"`;

exports[`Beastcss prune source should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss whitelist with regexp should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}h2.unused{color: red;}p{color: purple;}p.unused{color: orange;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss whitelist with string should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}h2.unused{color: red;}p{color: purple;}p.unused{color: orange;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" media=\\"print\\" onload=\\"this.media='all'; this.onload=null;\\"><noscript><link rel=\\"stylesheet\\" href=\\"/style.css\\"></noscript>
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;

exports[`Beastcss without asyncload should match html snapshot 1`] = `
"<html>
  <head>
    <style>h1{color: blue;}p{color: purple;}</style><link rel=\\"stylesheet\\" href=\\"/style.css\\" >
  </head>
  <body>
    <h1>Hello World!</h1>
    <p>This is a paragraph</p>
  </body>
</html>
"
`;
